bug with spacing

--- a/unit1/self-portrait/style.css
+++ b/unit1/self-portrait/style.css
@@ -83,15 +83,19 @@ img{
 .bottom-left {
   position: absolute;
   bottom: 15px;
-  left: 30%;
+  left: 26%;
   color: white;
   background-color: rgb(0, 0, 0);
+  font-size: 15px;
 }
 /* Bottom right text for number of episodes */
 .bottom-right {
   position: absolute;
-  bottom: 8px;
-  right: 16px;
+  bottom: 15px;
+  right: 30%;
+  color: white;
+  background-color: rgb(0, 0, 0);
+  font-size: 15px;
 }
 
 
